--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@
 # minted
 *.pyg
 
+# nicedoc
+*.doc
+
 # nomencl
 *.nlo
 
@@ -81,6 +84,9 @@
 *.sout
 *.sympy
 sympy-plots-for-*.tex/
+
+# tcolorbox
+*.listing
 
 # todonotes
 *.tdo
